added comments regarding model usage

--- a/bot.ipynb
+++ b/bot.ipynb
@@ -21,7 +21,8 @@
     "from langchain.llms import CTransformers\n",
     "from langchain.chains import RetrievalQA\n",
     "\n",
-    "MODEL_PATH = \"llama-2-7b-chat.ggmlv3.q2_K.bin\"\n",
+    "# Add here the path of your downloaded open-source model. Here I'm using \"llama-2-7b-chat.ggmlv3.q2_K.bin\" from HuggingFace.\n",
+    "MODEL_PATH = \"llama-2-7b-chat.ggmlv3.q2_K.bin\" \n",
     "\n",
     "DB_FAISS_PATH = 'vectorstore/test_db_faiss'\n",
     "\n",
