added support for GPU processing

--- a/bot.ipynb
+++ b/bot.ipynb
@@ -73,7 +73,7 @@
     "#QA Model Function\n",
     "def qa_bot():\n",
     "    embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
-    "                                       model_kwargs={'device': 'cpu'})\n",
+    "                                       model_kwargs={'device': 'cuda'})\n",
     "    db = FAISS.load_local(DB_FAISS_PATH, embeddings)\n",
     "    llm = load_llm()\n",
     "    qa_prompt = set_custom_prompt()\n",
